[package]
name = "spooky_bsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.1"
byteorder = "1.4.3"
derive-new = "0.5.9"
eyre = "0.6.8"
flate2 = "1.0.23"
num_enum = "0.5.7"

[dev-dependencies]
claim = "0.5.0"
test-case = "2.0.2"