[package]
name = "spooky_bsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.1"
byteorder = "1.4.3"
flate2 = "1.0.24"
num_enum = "0.7.2"
spooky_bsp_derive = { path = "spooky_bsp_derive" }

[dev-dependencies]
claim = "0.5.0"
test-case = "2.2.2"